examples/errors/duplicate_match_var.ik
type LinkedList enum {
  End
  Link {
    value String
    next LinkedList
  }
}

fn main() {
  let a = End{}
  match a {
    End() {
    }
    Link(x, Link(x, _)) {
    }
  }
}
